// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Listen Should show server info when in debug mode 1`] = `"Server ready http://localhost/"`;

exports[`Listen Should throw error when provided invalid port number 1`] = `
Array [
  Array [
    "Unable to parse port number INVALID NUMBER. Please provide a valid integer number",
  ],
]
`;

exports[`Proxy Headers Should accept protocol when trusted 1`] = `
Object {
  "protocol": "https",
}
`;

exports[`Proxy Headers Should not accept protocol by default 1`] = `
Object {
  "protocol": "http",
}
`;
